# eShopOnQFluentKit

./: .gitignore  CMakeLists.txt  README.md  version.rc
libs/5.15.2_MSVC/lib/Debug/: QFluent.lib
libs/5.15.2_MSVC/lib/Release/: QFluent.lib
libs/6.8.3_MSVC/lib/Debug/: QFluent.lib
libs/6.8.3_MSVC/lib/Release/: QFluent.lib
libs/include/: Animation.h  FluentGlobal.h  FluentIcon.h  Router.h  Screen.h  StyleSheet.h  TextWrap.h  Theme.h
libs/include/QFluent/: CardWidget.h  CheckBox.h  ComboBox.h  EditableComboBox.h  FluentTitleBar.h  FluentWidget.h  FluentWindow.h  Flyout.h  IconWidget.h  ImageLabel.h  InfoBar.h  Label.h  LineEdit.h  ListView.h  Loading.h  MultiViewComboBox.h  PagiNation.h  ProfileCard.h  PushButton.h  RadioButton.h  ScrollArea.h  Slider.h  SpinBox.h  StackedWidget.h  SwitchButton.h  TabBar.h  TableView.h  TeachingTip.h  TextEdit.h  ToolButton.h
libs/include/QFluent/DateTime/: CalendarPicker.h  CalendarView.h  CycleListWidget.h  DatePicker.h  PickerBase.h  TimePicker.h
libs/include/QFluent/Dialog/: ColorDialog.h  MaskDialogBase.h  MessageBoxBase.h  MessageDialog.h
libs/include/QFluent/Layout/: ExpandLayout.h  FlowLayout.h
libs/include/QFluent/Menu/: CheckableMenu.h  ComboBoxMenu.h  MenuActionListWidget.h  MenuAnimation.h  MenuItemDelegate.h  MultiViewComboBoxMenu.h  RoundMenu.h  SubMenuItemWidget.h
libs/include/QFluent/Navigation/: NavigationBar.h  NavigationPanel.h  NavigationWidget.h  Pivot.h
libs/include/QFluent/Progress/: IndeterminateProgressBar.h  IndeterminateProgressRing.h  ProgressBar.h  ProgressRing.h
libs/include/QFluent/Scrollbar/: ScrollBar.h  SmoothScroll.h
libs/include/QFluent/Settings/: ExpandSettingCard.h  OptionsSettingCard.h  SettingCard.h  SettingCardGroup.h
res/: res.qrc
res/style/dark/: home_interface.qss  setting_interface.qss
res/style/light/: home_interface.qss  setting_interface.qss
src/: ConfigManager.h  GalleryInterface.cpp  GalleryInterface.h  HomeInterface.cpp  HomeInterface.h  MainWindow.cpp  MainWindow.h  ScrollInterface.cpp  ScrollInterface.h  SettingInterface.cpp  SettingInterface.h  main.cpp
src/Card/: LinkCard.cpp  LinkCard.h  SampleCard.cpp  SampleCard.h
